# tp-format

./: .gitignore  CMakeLists.txt
include/: for_constexpr.hpp  if_constexpr.hpp  log2.hpp  sl_fmt.hpp
src/: sl_fmt.cpp
tests/: LiteralTest.cpp  LiteralTest.hpp
